--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,13 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
+    "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
+    "react-router-dom": "^6.23.1",
     "react-typed": "^2.0.12"
   },
   "devDependencies": {
